@@ -1,5 +1,6 @@
   - Add route 'GET /repair'
   - /repair 에서 10분마다 알람
+  - Publish with extra data when sender is order
 
 v0.3.8    Wed, 09 Sep 2015 17:44:07 +0900
   - #bestfit-alert .bestfit style 강조
